# LearnOpenGL

./: .gitignore  CMakeLists.txt  CameraTest.cpp  CameraTest.h  ComputeProgram.cpp  ComputeProgram.h  CoordSystemTest.cpp  CoordSystemTest.h  DrawPractice.cpp  DrawPractice.h  FPSCamera.cpp  FPSCamera.h  GLWindow.cpp  GLWindow.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderProgram.cpp  RenderProgram.h  Shader.cpp  Shader.h  Texture.h  TexturePractice.cpp  TexturePractice.h  Transform.cpp  Transform.h  TriangleDrawer.cpp  TriangleDrawer.h  Vertex.h  WindowUtil.cpp  WindowUtil.h  chapter_advanced.cpp  chapter_advanced.h  chapter_camera.cpp  chapter_camera.h  chapter_compute_shader.cpp  chapter_compute_shader.h  chapter_coord.cpp  chapter_coord.h  (+35 more)
.vscode-back/: c_cpp_properties.json  settings.json  tasks.json
assets/: out-1536*864-420p.yuv  out-1536*864-444p.yuv  out-1536*864-nv21.yuv  out-1536*864-rgb444le.rgb  out-1536*864-rgb565be.rgb  out-1536*864-rgb565le.rgb  out-1536*864-yuv420p10be.yuv  out-1536*864-yuv420p10le.yuv  out-1536*864-yuv420p16le.yuv
glad/: glad.c  glad.h
shaders/: 3d_color_cube.vs  3d_cube.frag  3d_cube.vs  3d_light_cube.frag  3d_light_cube.vs  3d_texture_cube.vs  4.1.textures.frag  5.1.transform.vs  6.1.coord_system.vs  frame_buffer.frag  frame_buffer.vs  frame_buffer_screen.frag  hdr.frag  input_output.frag  input_output.vs  light_map.frag  load_model.frag  load_model.vs  material_cube.frag  material_cube.vs  mix_textures.frag  more_attribute.frag  more_attribute.vs  parallel_light.frag  point_light.frag  pure_color_cube.frag  pure_color_cube.vs  rgb.frag  (+12 more)
